--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -13,5 +12,33 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+
+        <!-- JUnit 测试框架依赖，用于编写和运行可重复的测试。版本4.13.2是JUnit 4系列的最新版本之一。 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope> <!-- 指定该依赖项仅在测试时有效 -->
+        </dependency>
+
+        <!-- Mockito 是一个流行的Java mocking框架，用于在单元测试中模拟对象行为。版本4.5.1提供了许多新特性和改进。 -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.5.1</version>
+            <scope>test</scope> <!-- 同样，该依赖项也仅在测试时有效 -->
+        </dependency>
+
+        <!-- Jieba分词是一个流行的中文文本分词库，由“结巴中文分词”发展而来，支持多种分词模式。版本1.0.2可能是针对特定需求或兼容性优化的版本。 -->
+        <dependency>
+            <groupId>com.huaban</groupId>
+            <artifactId>jieba-analysis</artifactId>
+            <version>1.0.2</version>
+            <!-- 没有指定scope，因此该依赖项在项目的编译、测试和运行阶段都可用 -->
+        </dependency>
+
+    </dependencies>
 
 </project>
